everything is dockerized! Sqlite DB mounted to both containers

--- a/sensor/Dockerfile
+++ b/sensor/Dockerfile
@@ -3,6 +3,6 @@ FROM frankwolf/rpi-python3
 RUN pip3 install --upgrade setuptools \
     && pip3 install Adafruit_DHT
 
-COPY sensor.py sensor.py
+COPY sensor/sensor.py sensor.py
 
 CMD ["python3", "sensor.py"]
